# clang

examples/: CMakeLists.txt
examples/AnnotateVariables/: AnnotateVariables.cpp  CMakeLists.txt  ClangUtils.cpp  ClangUtils.h  Common.h  ReferenceExprExtractor.h
include/clang/AST/: ASTConsumer.h  Expr.h  RecursiveASTVisitor.h  Stmt.h  StmtVisitor.h
include/clang/Basic/: StmtNodes.td
include/clang/FrontendTool/: Utils.h
include/clang/Sema/: Sema.h  SemaConsumer.h
lib/AST/: DeclPrinter.cpp  Expr.cpp  StmtPrinter.cpp  StmtProfile.cpp
lib/CodeGen/: CGExpr.cpp  CGExprScalar.cpp  CodeGenFunction.cpp  CodeGenFunction.h
lib/Frontend/: MultiplexConsumer.cpp
lib/FrontendTool/: ExecuteCompilerInvocation.cpp
lib/Rewrite/Core/: Rewriter.cpp
lib/Sema/: SemaExpr.cpp  TreeTransform.h
lib/Serialization/: ASTReaderStmt.cpp  ASTWriterStmt.cpp
tools/: CMakeLists.txt
tools/assertions/: AnnotateVariables.cpp  AnnotateVariablesAction.h  Assertion.h  CMakeLists.txt  Common.h  Flags.h  ReferenceExprExtractor.h  StringJoin.h  main.cpp
tools/libclang/: RecursiveASTVisitor.h
